--- a/vl53l1x/CMakeLists.txt
+++ b/vl53l1x/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
+add_compile_options(-Wno-unused-parameter -Wno-bool-compare -Wno-vla -Wno-comment -Wno-overflow)
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
